--- a/apps/professor/package.json
+++ b/apps/professor/package.json
@@ -8,6 +8,7 @@
     "dev:server": "tsx server/index.ts",
     "dev:full": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build": "tsc && vite build",
+    "start": "tsx server/index.ts",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
