--- a/apps/professor/package.json
+++ b/apps/professor/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "dev:server": "tsx server/index.ts",
     "dev:full": "concurrently \"npm run dev:server\" \"npm run dev\"",
-    "build": "tsc && vite build",
+    "build": "tsc && node node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
