--- a/apps/professor/package.json
+++ b/apps/professor/package.json
@@ -8,7 +8,7 @@
     "dev:server": "tsx server/index.ts",
     "dev:full": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build": "tsc && node node_modules/vite/bin/vite.js build",
-    "start": "npm run dev:server",
+    "start": "node node_modules/tsx/dist/cli.mjs server/index.ts",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
