Changed dev:server to avoid tsx binary and run via Node

--- a/apps/professor/package.json
+++ b/apps/professor/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "tsx server/index.ts",
+    "dev:server": "node node_modules/tsx/dist/cli.mjs server/index.ts",
     "dev:full": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build": "tsc && node node_modules/vite/bin/vite.js build",
     "start": "node node_modules/tsx/dist/cli.mjs server/index.ts",
