--- a/apps/professor/package.json
+++ b/apps/professor/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node node_modules/vite/bin/vite.js",
     "dev:server": "node node_modules/tsx/dist/cli.mjs server/index.ts",
     "dev:full": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build": "tsc && node node_modules/vite/bin/vite.js build",
