Group ID passed for indexed documents

--- a/apps/professor/.env.example
+++ b/apps/professor/.env.example
@@ -14,5 +14,5 @@ VITE_N8N_REINDEX_FILE_WEBHOOK_ID=your_reindex_file_webhook_id
 VITE_N8N_FILE_STATUS_WEBHOOK_ID=your_file_status_webhook_id
 
 # Development Settings
-VITE_DEV_MODE=false
+VITE_DEV_MODE=true
 VITE_USE_MOCK_DATA=false
