Fix ChatKit initialization: use custom element instead of window.chatkit
- Change from window.chatkit to openai-chatkit custom element
- Wait for custom element registration instead of window.chatkit
- Fix JavaScript syntax error (nested try blocks)
- Add dist/ to .gitignore to exclude build artifacts
- Improve error handling and logging

--- a/apps/professor/.env.example
+++ b/apps/professor/.env.example
@@ -16,3 +16,8 @@ VITE_N8N_FILE_STATUS_WEBHOOK_ID=your_file_status_webhook_id
 # Development Settings
 VITE_DEV_MODE=true
 VITE_USE_MOCK_DATA=false
+
+# ChatKit Embed Configuration (Server-side only)
+# These are used by the server endpoints (/session and /chat)
+OPENAI_API_KEY=your_openai_api_key_here
+WORKFLOW_ID=your_workflow_id_here
