--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ config/secrets.json
 node_modules/
 
 apps/professor/.env.example
-apps/professor/node_modules/
+apps/professor/node_modules/apps/professor/dist/
+dist/
