--- a/apps/professor/package.json
+++ b/apps/professor/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "lucide-react": "^0.545.0",
     "react": "^18.2.0",
