ChatKit: CHATKIT_DEBUG=1 로그 (payload, response, groupid, forceNew)

--- a/apps/professor/.env.example
+++ b/apps/professor/.env.example
@@ -21,3 +21,5 @@ VITE_USE_MOCK_DATA=false
 # These are used by the server endpoints (/session and /chat)
 OPENAI_API_KEY=your_openai_api_key_here
 WORKFLOW_ID=your_workflow_id_here
+# Optional: set to 1 to log session payload and OpenAI response (no secrets). Default: off.
+# CHATKIT_DEBUG=1
